# PokemonBaseStats

./: .gitignore  Makefile  main.py  pyproject.toml  readme.md  webscraping.py
Docker/: docker-compose.yml
Docker/scripts/: init.sql
requirements/: requirements.txt
